# thrift_types

./: .gitignore  Jenkinsfile  LICENSE  Makefile  README.md  august.thrift  base.mk  battery.thrift  ble_mesh_config_service.thrift  ble_mesh_dfu_service.thrift  bluetooth.thrift  bluetooth_common.thrift  bluetooth_switch.thrift  bootstrap.thrift  butterflymx.thrift  client_ui.thrift  climate_sensor.thrift  color.thrift  configuration.thrift  cross_platform_log.thrift  crypto.thrift  demo.thrift  device_groups.thrift  device_metrics.thrift  device_provisioning.thrift  discovery.thrift  doorbell.thrift  faceplate.thrift  factory_programming.thrift  fix_cpp_imports.sh  gangbox.thrift  garage_door.thrift  genie.thrift  google.thrift  hardware.thrift  home_energy_system.thrift  homekit.thrift  homes.thrift  honeywell.thrift  honeywell_tc2.thrift  (+42 more)
cpp/: common_headers.hpp
java/: .gitignore  Makefile  build.gradle  gradle.properties  settings.gradle
peripheral_interfaces/: alarm_config_interface.thrift  alexa_skill_interface.thrift  almond_configuration_interface.thrift  always_on_interface.thrift  analytics_interface.thrift  art_configuration_interface.thrift  art_interface.thrift  august_configuration_interface.thrift  ble_interface.thrift  bootstrap_interface.thrift  brilliant_plug_interface.thrift  brilliant_virtual_device_configuration_interface.thrift  building_entry_panel_interface.thrift  butterflymx_configuration_interface.thrift  camera_interface.thrift  climate_sensor_interface.thrift  homekit_interface.thrift  (+77 more)
python/: Makefile  README.md  pyproject.toml  setup.py
(+16 files in other folders)
