[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thrift-types"
version = "1.0.0"
description = "Thrift Types"
readme = "README.md"
maintainers = [
    {name = "Brilliant", email = "sweng@brilliant.tech"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "thrift",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/ramjet-labs/thrift_types"
